# RLforHFT

./: .gitignore  meson.build
FRL/: __init__.py  approximate_dynamic_programming.py  distribution.py  dynamic_programming.py  experience_replay.py  finte_horizon.py  function_approx.py  iterate.py  markov_decision_process.py  markov_process.py  monte_carlo.py  policy.py  policy_gradient.py  returns.py  td.py  td_lambda.py
FRL/chapters/: probabilty.py
FRL/gen_utils/: __init__.py  common_funcs.py  plot_funcs.py
GrokkingRL/: DQN.py  DynamicProgramming.py  FCD.py  MAB.py  MC.py  MDP.py  Sarsa.py  Value.py
GrokkingRL/GrokkingConcurrency/: matmul_concurrent.py  matmul_sequential.py  protocol.py  scheduler.py  server.py  worker.py
GrokkingRL/JaxRecommend/: chatper2.ipynb  experiment.py  make_dictionary.py  trivialRecommender.py
LowLatency/: exchange_main.cpp  market_data_publisher.cpp  market_order.cpp  market_order_book.cpp  matching_engine.cpp  mcast_socket.cpp  me_order.cpp  me_order_book.cpp  order_server.cpp  position_keeper.cpp  snapshot_synthesizer.cpp  tcp_server.cpp  tcp_socket.cpp
LowLatency/include/: client_request.h  client_response.h  fifo_sequencer.h  lf_queue.h  logging.h  macros.h  market_data.h  market_data_publisher.h  market_order.h  market_order_book.h  market_update.h  matching_engine.h  mcast_socket.h  me_order.h  me_order_book.h  mem_pool.h  order_server.h  position_keeper.h  snapshot_synthesizer.h  socket_utils.h  tcp_server.h  tcp_socket.h  thread_utils.h  time_utils.h  types.h
MDP_DP_RL/algorithms/: ams.py  backward_adp.py  backward_dp.py  func_approx_spec.py  helper_funcs.py  opt_base.py  tabular_base.py
MDP_DP_RL/algorithms/adp/: adp.py
MDP_DP_RL/algorithms/dp/: dp_analytic.py  dp_base.py  dp_numeric.py
MDP_DP_RL/func_approx/: dnn.py  dnn_spec.py  eligibility_traces.py  func_approx_base.py  linear_approx.py
MDP_DP_RL/processes/: Digraph.gv  det_policy.py  mab_env.py  mdp.py  mdp_refined.py  mdp_rep_for_adp.py  mdp_rep_for_adp_pg.py  mdp_rep_for_rl_fa.py  mdp_rep_for_rl_pg.py  mdp_rep_for_rl_tabular.py  mp.py  mp_funcs.py  mrp.py  mrp_refined.py  policy.py
MDP_DP_RL/utils/: beta_distribution.py  gen_utils.py  generic_typevars.py  standard_typevars.py
ML/: SimpleRL.cpp  abstract_merge_node.cpp  abstract_network_node.cpp  abstract_recurrent_network_node.cpp  cw_rnn.cpp  dense.cpp  epsilon_greedy.cpp  flappy_simulator.cpp  gru.cpp  lstm.cpp  main.cpp  merge_product.cpp  merge_sum.cpp  network.cpp  network_serializer.cpp  ppo2.cpp  sarsa.cpp  state_aggregation.cpp  tile_coding.cpp
ML/include/: abstract_merge_node.h  abstract_network_node.h  abstract_node.h  abstract_recurrent_network_node.h  activation.h  approximator.h  cw_rnn.h  dense.h  env.h  environment.h  epsilon_greedy.h  flappy_simulator.h  gru.h  learner.h  lstm.h  matrix_clamp.h  median.h  merge_product.h  merge_sum.h  network.h  network_serializer.h  policy.h  running_statistics.h  sarsa.h  serializable.h  state_aggregation.h  tile_coding.h
ML2/: data_process.cpp
ML2/include/: data_process.h
Modeling Derivatives/: main.cpp  matrix.cpp
Modeling Derivatives/include/: blackscholes_process.h  diffusion_process.h  instrument.h  matrix.h  ornstein_uhlenbeck_process.h  patterns.h  square_root_process.h
